--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <!-- Header -->
+
     <header class="header-page">
       <div class="container main-nav">
         <nav class="main-nav">
@@ -36,8 +37,8 @@
 
         <ul class="contacts list">
           <li class="list-item">
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
+            <a href="mailto:info@devstudio.com" class="link">
+              info@devstudio.com</a
             >
           </li>
           <li class="list-item">
@@ -51,18 +52,25 @@
 
     <main>
       <!-- Hero -->
-      <section class="hero background">
+
+      <section class="hero overlay background">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button type="button" class="button primary">Order Service</button>
       </section>
 
       <!-- Benefits -->
+
       <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Benefits</h2>
 
           <ul class="card-set list">
             <li class="card-item">
+              <div class="benefits-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="list-title">Strategy</h3>
               <p>
                 Our goal is to identify the business problem to walk away with
@@ -70,6 +78,11 @@
               </p>
             </li>
             <li class="card-item">
+              <div class="benefits-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="list-title">Punctuality</h3>
               <p>
                 Bring the key message to the brand's audience for the best price
@@ -77,6 +90,11 @@
               </p>
             </li>
             <li class="card-item">
+              <div class="benefits-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="list-title">Diligence</h3>
               <p>
                 Research and confirm brands that present the strongest digital
@@ -84,6 +102,11 @@
               </p>
             </li>
             <li class="card-item">
+              <div class="benefits-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="list-title">Technologies</h3>
               <p>
                 Design practice focused on digital experiences. We bring forth a
@@ -95,6 +118,7 @@
       </section>
 
       <!-- What are we doing -->
+
       <section class="section no-padding">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
@@ -117,6 +141,7 @@
       </section>
 
       <!-- Our team -->
+
       <section class="section team-background">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
@@ -128,9 +153,55 @@
                 alt="Product designer Mark Guerrero"
                 width="264"
               />
-              <div class="card-discription">
+              <div class="team-card-discription">
                 <h3 class="list-title">Mark Guerrero</h3>
-                <p>Product Designer</p>
+                <p class="team-text">Product Designer</p>
+                <ul class="socials list">
+                  <li class="socials-list team-socials-list">
+                    <a
+                      href=""
+                      class="social-link team-socials-link"
+                      aria-label="Instagram"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-list team-socials-list">
+                    <a
+                      href=""
+                      class="social-link team-socials-link"
+                      aria-label="Twitter"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-list team-socials-list">
+                    <a
+                      href=""
+                      class="social-link team-socials-link"
+                      aria-label="Facebook"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-list team-socials-list">
+                    <a
+                      href=""
+                      class="social-link team-socials-link"
+                      aria-label="Linkedin"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item card-item">
@@ -139,9 +210,55 @@
                 alt="Frontend Developer Tom Ford"
                 width="264"
               />
-              <div class="card-discription">
+              <div class="team-card-discription">
                 <h3 class="list-title">Tom Ford</h3>
-                <p>Frontend Developer</p>
+                <p class="team-text">Frontend Developer</p>
+                <ul class="socials list">
+                  <li class="socials-list team-socials-list">
+                    <a
+                      href=""
+                      class="social-link team-socials-link"
+                      aria-label="Instagram"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-list team-socials-list">
+                    <a
+                      href=""
+                      class="social-link team-socials-link"
+                      aria-label="Twitter"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-list team-socials-list">
+                    <a
+                      href=""
+                      class="social-link team-socials-link"
+                      aria-label="Facebook"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-list team-socials-list">
+                    <a
+                      href=""
+                      class="social-link team-socials-link"
+                      aria-label="Linkedin"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item card-item">
@@ -150,9 +267,55 @@
                 alt="Marketing Camila Garcia"
                 width="264"
               />
-              <div class="card-discription">
+              <div class="team-card-discription">
                 <h3 class="list-title">Camila Garcia</h3>
-                <p>Marketing</p>
+                <p class="team-text">Marketing</p>
+                <ul class="socials list">
+                  <li class="socials-list team-socials-list">
+                    <a
+                      href=""
+                      class="social-link team-socials-link"
+                      aria-label="Instagram"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-list team-socials-list">
+                    <a
+                      href=""
+                      class="social-link team-socials-link"
+                      aria-label="Twitter"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-list team-socials-list">
+                    <a
+                      href=""
+                      class="social-link team-socials-link"
+                      aria-label="Facebook"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-list team-socials-list">
+                    <a
+                      href=""
+                      class="social-link team-socials-link"
+                      aria-label="Linkedin"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item card-item">
@@ -161,9 +324,55 @@
                 alt="UI Designer Daniel Wilson"
                 width="264"
               />
-              <div class="card-discription">
+              <div class="team-card-discription">
                 <h3 class="list-title">Daniel Wilson</h3>
-                <p>UI Designer</p>
+                <p class="team-text">UI Designer</p>
+                <ul class="socials list">
+                  <li class="socials-list team-socials-list">
+                    <a
+                      href=""
+                      class="social-link team-socials-link"
+                      aria-label="Instagram"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-list team-socials-list">
+                    <a
+                      href=""
+                      class="social-link team-socials-link"
+                      aria-label="Twitter"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-list team-socials-list">
+                    <a
+                      href=""
+                      class="social-link team-socials-link"
+                      aria-label="Facebook"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-list team-socials-list">
+                    <a
+                      href=""
+                      class="social-link team-socials-link"
+                      aria-label="Linkedin"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -171,15 +380,118 @@
       </section>
     </main>
 
+    <!-- Customers -->
+
+    <section class="section">
+      <div class="container">
+        <h2 class="section-title">Customers</h2>
+        <ul class="card-set list">
+          <li class="customers-list card-item">
+            <a href="" class="customers-link" aria-label="Client1">
+              <svg width="104" height="56" class="customers-icon">
+                <use href="./images/icons.svg#icon-logo1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-list card-item">
+            <a href="" class="customers-link" aria-label="Client2">
+              <svg width="104" height="56" class="customers-icon">
+                <use href="./images/icons.svg#icon-logo2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-list card-item">
+            <a href="" class="customers-link" aria-label="Client3">
+              <svg width="104" height="56" class="customers-icon">
+                <use href="./images/icons.svg#icon-logo3"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-list card-item">
+            <a href="" class="customers-link" aria-label="Client4">
+              <svg width="104" height="56" class="customers-icon">
+                <use href="./images/icons.svg#icon-logo4"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-list card-item">
+            <a href="" class="customers-link" aria-label="Client5">
+              <svg width="104" height="56" class="customers-icon">
+                <use href="./images/icons.svg#icon-logo5"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-list card-item">
+            <a href="" class="customers-link" aria-label="Client6">
+              <svg width="104" height="56" class="customers-icon">
+                <use href="./images/icons.svg#icon-logo6"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
     <!-- Footer -->
     <footer class="footer background">
-      <div class="container">
-        <a href="./index.html" class="logo"><span>web</span>studio</a>
+      <div class="container footer-container">
+        <div class="footer-logo">
+          <a href="./index.html" class="logo"><span>web</span>studio</a>
 
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing &amp; growth solutions.
-        </p>
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing &amp; growth solutions.
+          </p>
+        </div>
+        <div class="footer-socials">
+          <b class="social-media">Social media</b>
+          <ul class="socials list">
+            <li class="footer-socials-list">
+              <a
+                href=""
+                class="social-link footer-socials-link"
+                aria-label="Instagram"
+              >
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-list">
+              <a
+                href=""
+                class="social-link footer-socials-link"
+                aria-label="Twitter"
+              >
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-list">
+              <a
+                href=""
+                class="social-link footer-socials-link"
+                aria-label="Facebook"
+              >
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-list">
+              <a
+                href=""
+                class="social-link footer-socials-link"
+                aria-label="Linkedin"
+              >
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
