--- a/portfolio.html
+++ b/portfolio.html
@@ -190,13 +190,48 @@
       </section>
     </main>
     <footer class="footer background">
-      <div class="container">
-        <a href="./index.html" class="logo"><span>web</span>studio</a>
+      <div class="container footer-container">
+        <div class="footer-logo">
+          <a href="./index.html" class="logo"><span>web</span>studio</a>
 
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing &amp; growth solutions.
-        </p>
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing &amp; growth solutions.
+          </p>
+        </div>
+        <div class="footer-socials">
+          <b class="social-media">Social media</b>
+          <ul class="socials list">
+            <li class="footer-socials-list">
+              <a href="" class="social-link footer-socials-link">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-list">
+              <a href="" class="social-link footer-socials-link">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-list">
+              <a href="" class="social-link footer-socials-link">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-list">
+              <a href="" class="social-link footer-socials-link">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
