--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <main>
       <!-- Hero -->
 
-      <section class="hero overlay background">
+      <section class="hero overlay">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button type="button" class="button primary">Order Service</button>
       </section>
